# Proyecto-Clasificaci-n_grupo6

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  app.py  pyproject.toml  requirements.docker.txt  requirements.txt
app/: app.py  config.py  data_utils.py  db_manager.py  db_models.py  db_write_example.py  main.py  model_utils.py  ui_components.py  utils.py
app/pages/: dashboard.py  history.py  simulator.py
app/tests/: conftest.py  test_db_manager.py  test_model_utils.py
model/: SVM.ipynb  model_testing.py
notebooks/: README.md  eda_shoppers_explained_and_with_business_idea.ipynb  modelo_analisis_comparativo_clasificacion.md
notebooks/modeling/: random_forest.ipynb
notebooks/modeling/SVM/export_models/: svm_final_model.joblib
notebooks/modeling/lightgbm/: lightgbm_model.ipynb  lightgbm_model.pkl  lightgbm_preprocessor.pkl  model_lightgbm.ipynb  model_lightgbm.py  optuna_study.pkl
notebooks/modeling/random_forest/: random_forest.ipynb
notebooks/modeling/random_forest/export_models/: random_forest_model_base.pkl  random_forest_optimized.pkl
notebooks/modeling/red_neuronal/: Shoppers_NN.ipynb
notebooks/modeling/xgboost/: xgboost.ipynb
notebooks/modeling/xgboost/pkl_exports/: xgboost_model_base.pkl  xgboost_optimized.pkl  xgboost_preprocessor.pkl
tests/: conftest.py
