[project]
name = "proyecto-clasificaci-n-grupo6"
version = "0.1.0"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "imblearn>=0.0",
    "ipywidgets>=8.1.7",
    "lightgbm>=4.6.0",
    "matplot>=0.1.9",
    "narwhals>=1.38.2",
    "numpy>=2.2.5",
    "optuna>=4.3.0",
    "pandas>=2.2.3",
    "platformdirs>=4.3.8",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "xgboost>=3.0.0",
]
